<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" 
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.3.0</version>
		<relativePath/>
	</parent>
	<groupId>com.example</groupId>
	<artifactId>apache</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>apache</name>
	<description>Use Apache Ignite Executor Service to run the code and generate the json</description>
	<properties>
		<java.version>22</java.version>
		<jackson.version>2.15.2</jackson.version>
		<ignite.version>2.16.0</ignite.version>
	</properties>
	<dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>${jackson.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.example</groupId>
            <artifactId>java-functional</artifactId>
            <version>1.0-SNAPSHOT</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/libs/java-functional-1.0-SNAPSHOT.jar</systemPath>
        </dependency>

    <!-- Apache Ignite Core -->
    <dependency>
        <groupId>org.apache.ignite</groupId>
        <artifactId>ignite-core</artifactId>
        <version>${ignite.version}</version>
    </dependency>

    <!-- Apache Ignite Spring -->
    <dependency>
        <groupId>org.apache.ignite</groupId>
        <artifactId>ignite-spring</artifactId>
        <version>${ignite.version}</version>
    </dependency>

    <dependency>
        <groupId>javax.annotation</groupId>
        <artifactId>javax.annotation-api</artifactId>
        <version>1.3.2</version>
    </dependency>

    </dependencies>

<build>
    <plugins>
        <plugin>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-maven-plugin</artifactId>
            <version>3.3.0</version>
            <configuration>
                <jvmArguments>
						--add-opens=java.base/jdk.internal.access=ALL-UNNAMED
						--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED
						--add-opens=java.base/sun.nio.ch=ALL-UNNAMED
						--add-opens=java.base/sun.util.calendar=ALL-UNNAMED
						--add-opens=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED
						--add-opens=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED
						--add-opens=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED
						--add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED
						--add-opens=java.base/java.io=ALL-UNNAMED
						--add-opens=java.base/java.nio=ALL-UNNAMED
						--add-opens=java.base/java.net=ALL-UNNAMED
						--add-opens=java.base/java.util=ALL-UNNAMED
						--add-opens=java.base/java.util.concurrent=ALL-UNNAMED
						--add-opens=java.base/java.util.concurrent.locks=ALL-UNNAMED
						--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED
						--add-opens=java.base/java.lang=ALL-UNNAMED
						--add-opens=java.base/java.lang.invoke=ALL-UNNAMED
						--add-opens=java.base/java.math=ALL-UNNAMED
						--add-opens=java.sql/java.sql=ALL-UNNAMED
						--add-opens=java.base/java.lang.reflect=ALL-UNNAMED
						--add-opens=java.base/java.time=ALL-UNNAMED
						--add-opens=java.base/java.text=ALL-UNNAMED
						--add-opens=java.management/sun.management=ALL-UNNAMED
						--add-opens java.desktop/java.awt.font=ALL-UNNAMED
                </jvmArguments>
            </configuration>
        </plugin>
    </plugins>
</build>

</project>
